# brain-sync

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  BRAIN_TREE_STRUCTURE_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.agents/plugins/: marketplace.json
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: COMPATIBILITY.md  GLOSSARY.md  RULES.md  VERSIONING.md
docs/architecture/: ARCHITECTURE.md
docs/brain/: README.md  SCHEMAS.md  TEMPLATES.md
docs/brain-format/: COMPATIBILITY.md  GLOSSARY.md  README.md  RULES.md  SCHEMAS.md  TEMPLATES.md  VERSIONING.md
docs/migrations/: v0.5.0-v0.7.0.md  v1.0-v1.1-source-state-boundary.md  v21-v23.md
docs/plans/: PLAN_architecture-hardening.md  PLAN_brain-repository.md  PLAN_desktop-shell.md  PLAN_docs-upgrade.md  PLAN_journaling.md  PLAN_migration-testing.md  PLAN_module-ontology.md  PLAN_move-semantics.md  PLAN_operational-events-hardening.md  PLAN_plugin-delivery.md  PLAN_poll-batch-ordering.md  PLAN_portable-state-write-discipline.md  PLAN_regen-refactor.md  PLAN_remote-last-changed-backoff.md  PLAN_runtime-failure-hardening.md  PLAN_runtime-observability.md  PLAN_runtime-release-alignment.md  PLAN_source-fetch-hardening.md  PLAN_source-lifecycle-hardening-v2.md  PLAN_source-lifecycle-hardening.md  PLAN_structural-health.md  PLAN_sync-source-command.md  PLAN_test-isolation-hardening.md  PLAN_v23.md  PLAN_windows-long-paths.md  README.md  plan_architecture-hardening_2_2026-03-17.md  plan_architecture-hardening_2_approved_2026-03-17T20-58-15.md  plan_architecture-hardening_2_notes.md  plan_architecture-hardening_3_2026-03-18.md  plan_architecture-hardening_3_approved_2026-03-18T10-56-01.md  plan_architecture-hardening_3_notes.md  plan_architecture-hardening_review_1_2026-03-17.md  plan_brain-repository_2_2026-03-17.md  plan_brain-repository_2_approved_2026-03-17T11-13-59.md  plan_brain-repository_2_review_1_2026-03-17.md  plan_brain-repository_3_2026-03-17.md  plan_brain-repository_3_review_1_2026-03-17.md  plan_brain-repository_4_2026-03-17.md  plan_brain-repository_4_approved_2026-03-17T13-40-01.md  (+149 more)
docs/regen/: README.md
docs/runtime/: README.md  SCHEMAS.md
docs/sync/: README.md
docs/user/: BRAIN_TREE_STRUCTURE_GUIDE.md  DEMOS.md
plugins/brain-sync/: .mcp.json
scripts/: test-fast.cmd  test-fast.sh  test-full.cmd  test-full.sh
src/brain_sync/: __main__.py  area_index.py  attachments.py  brain_repository.py  config.py  confluence_rest.py  context.py  context_index.py  converter.py  docx_converter.py  fileops.py  fs_utils.py  layout.py  (+16 more)
tests/: conftest.py  test_attachment_refs.py  test_attachments.py  test_binding_behaviour.py  test_commands.py  test_confluence_preprocess.py  test_confluence_rest.py  test_context.py  test_context_index.py  test_converter.py  test_db_lifecycle.py  test_docx_converter.py  test_fileops.py  test_fs_utils.py  test_gdoc_inline_images.py  test_googledocs_adapter.py  test_integration.py  test_link_rewriter.py  test_manifest.py  test_mcp.py  test_pipeline.py  test_placement.py  test_regen.py  test_regen_queue.py  test_retry.py  test_scheduler.py  test_source_adapter.py  test_sources.py  test_state.py  test_title_resolution.py  test_token_tracking.py  test_watcher_moves.py
(+249 files in other folders)
