[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-sync"
version = "0.1.0"
description = "Cross-platform daemon that syncs external documents into local folders"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "markdownify>=0.13",
    "selectolax>=0.3",
    "python-docx>=1.1",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.9",
    "pyright>=1.1",
    "pre-commit>=4.0",
]

[project.scripts]
brain-sync = "brain_sync.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "B", "C4", "UP", "I", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["brain_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
    "integration: full pipeline flow tests with mocked externals",
    "external: tests that mock external REST API interactions",
    "mcp: MCP server tool handler tests",
    "unit: fast isolated unit tests",
]
