[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-sync"
version = "0.1.0"
description = "Cross-platform daemon that syncs external documents into local folders"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "markdownify>=0.13",
    "selectolax>=0.3",
    "python-docx>=1.1",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
google = [
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.5",
    "pytest-cov>=6.0",
    "psutil>=5.9",
    "ruff>=0.9",
    "pyright>=1.1",
    "pre-commit>=4.0",
]

[project.scripts]
brain-sync = "brain_sync.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "B", "C4", "UP", "I", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["brain_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
    "integration: full pipeline flow tests with mocked externals",
    "external: tests that mock external REST API interactions",
    "mcp: MCP server tool handler tests",
    "unit: fast isolated unit tests",
    "system: CLI subprocess tests with fake LLM backend",
    "e2e: end-to-end daemon lifecycle and watcher tests",
]
